[gd_scene load_steps=3 format=3 uid="uid://dsl7o01coe4yq"]

[ext_resource type="Script" path="res://item_editor.gd" id="1_bo57u"]

[sub_resource type="Theme" id="Theme_mgjn0"]

[node name="ItemEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bo57u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ImageMargin"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer/ImageMargin/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ItemImageRect" type="TextureRect" parent="Panel/VBoxContainer/ImageMargin/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_mgjn0")

[node name="SelectImageButton" type="Button" parent="Panel/VBoxContainer/ImageMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Image Select"

[node name="NameMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/NameMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/NameMargin/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="ItemNameInput" type="LineEdit" parent="Panel/VBoxContainer/NameMargin/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Input Item Name"

[node name="DescriptionMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/DescriptionMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/DescriptionMargin/VBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="ItemDescriptionInput" type="TextEdit" parent="Panel/VBoxContainer/DescriptionMargin/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Input Item Description"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Power :"

[node name="ItemPowerInput" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Input Power"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Save"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load"

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="DeleteButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Delete"

[node name="FileDialog" type="FileDialog" parent="."]
position = Vector2i(100, 50)
size = Vector2i(500, 500)

[node name="ImageFileDialog" type="FileDialog" parent="."]
position = Vector2i(100, 50)
size = Vector2i(500, 500)

[connection signal="pressed" from="Panel/VBoxContainer/ImageMargin/VBoxContainer/SelectImageButton" to="." method="_on_select_image_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/MarginContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/MarginContainer2/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/MarginContainer3/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="ImageFileDialog" to="." method="_on_image_file_dialog_file_selected"]
